
Kinda new:
Baywatch 4.02 (unofficial MOD)
Teenage Mutant Ninja Turtles 2.00 (unofficial MOD)

Clones:
Adventures of Rocky and Bullwinkle and Friends 1.03 (Italian), 1.10 (Belgian) (note that both dumps are incomplete, the italian set may be correct though, but the belgian one misses the display, so does not feature belgian text)
Bad Cats LF-1 (French)
Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
Cue Ball Wizard (Spanish / Vifico license)
Diner LA-4 (Fixed Right Ramp MOD)
Gorgar L-2 (most likely official, but unreleased so far, makes it the newest version available)
High Speed (G-4 aka German PROTO4)
Maverick 4.04 (German, Display 4.00)
Monte Carlo (German) (most likely older revision than existing one, see above)
Pin-Bot J-5 (PEMBOT (no relation)) (MOD)
Police Force LX-5a (MOD)
Rollergames TA-2 (LA-2C competition MOD based Tournament Edition)
Rolling Stones V21 (unreleased so far, makes it the newest version available)
Soccer Kings (alternate set 2)
Super Mario Bros. (Spanish / Vifico license) (rev.1 and (most likely) rev.2)
Surf 'n Safari (Tournament MOD)
Transporter the Rescue L-3 (Fixed Jackpot MOD), LX-4 (Competition MOD in 2 variants: 'adult' and clean (one replaced word))
Victory (tournament/competition MOD 1.1 & 1.2 & 1.3)



Version 3.6 (January 29th, 2025) - "Sounds good III / Looks good"
------------------------------------------------------------------------------

"AltSound 2.0"
- Completely re-written AltSound (mode 1) processing
- Fixed existing bugs and regressions in the original AltSound code
- Compatible with all existing AltSound library formats
- New G-Sound library format.  Provides a new option for authors to develop
  immersive, multi-layered AltSound packages
- New AltSound configuration options via per-table .ini file
- Independent and configurable always-on AltSound logger
- Ability to record live game sound commands.  Useful for testing sounds without
  having to repeatedly create a live game.