@@ -61,9 +61,10 @@ DRIVERNV(agsoccer25l)   //         04/93  A.G. Soccer-Ball (R18u, 2.5L Sound)
 DRIVERNV(agfoot07)      // AG01:   07/92  A.G. Football (R07u)
 DRIVERNV(agfootbl)      //         04/93  A.G. Football (R18u, 2.1 Sound)
 DRIVERNV(agfootbl25l)   //         04/93  A.G. Football (R18u, 2.5L Sound)
-DRIVERNV(wrldtou3)      // AG03:   02/93  Al's Garage Band Goes On a World Tour (R06a)
-DRIVERNV(wrldtou2)      //         02/93  Al's Garage Band Goes On a World Tour (R02b)
-DRIVERNV(wrldtour)      //         03/93  Al's Garage Band Goes On a World Tour (R01c)
+DRIVERNV(wrldtou4)      // AG03:   04/93  Al's Garage Band Goes On a World Tour Version A (R09a)
+DRIVERNV(wrldtou3)      //         02/93  Al's Garage Band Goes On a World Tour Version A (R06a)
+DRIVERNV(wrldtou2)      //         02/93  Al's Garage Band Goes On a World Tour Version B (R02b)
+DRIVERNV(wrldtour)      //         03/93  Al's Garage Band Goes On a World Tour Version B (R01c)
 DRIVERNV(usafoota)      // AG05:   09/92  U.S.A. Football (R01u)
 DRIVERNV(usafootb)      //         02/93  U.S.A. Football (R06u)
 DRIVERNV(punchy)        // EPC061: 08/93  Punchy the Clown (R02)
